# Source: https://packaging.python.org/tutorials/packaging-projects/#configuring-metadata

[metadata]
name = androguard
version = v3.3.6
description = Androguard is a full python tool to play with Android files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/androguard/androguard
project_urls =
    Bug Tracker = https://github.com/androguard/androguard/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Licence, Version 2.0
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    pygments>=2.3.1
    lxml>=4.3.0
    colorama>=0.4.1
    matplotlib>=3.0.2
    asn1crypto>=0.24.0
    click>=7.0
    pydot>=1.4.1
    ipython>=5.0.0
    pyyaml
    fastapi
    uvicorn
    loguru
    mutf8
    dataset
    frida

[options.packages.find]
where = .
include = androguard*